Thu,  5 Apr 2007 07:49:19 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: Increment playcount from zero to one
          if we've played a podcast locally, but playcount is still zero on
          iPod

Wed,  4 Apr 2007 18:10:17 +0200 <thp@perli.net>
        * data/po/pt.po: Updated Portuguese translation from Joel Calado
          (joelcalado gmail.com)

Tue,  3 Apr 2007 16:21:26 +0200 <thp@perli.net>
        * data/po/nl.po: Updated Dutch translation from Pieter De Decker 
          (pdedecker gmail.com)

Tue,  3 Apr 2007 13:43:35 +0200 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Only display icon on unplayed items
        * src/gpodder/gpodder.py: Rename "Played" column to "New"
        * data/gpodder.glade: Rewrite text to display "New/Unplayed" column

Tue,  3 Apr 2007 13:14:02 +0200 <thp@perli.net>
        * src/gpodder/liblogger.py: Enhance the log() function to accept a 
          "sender" keyword argument that contains the object tha sends the 
          message; the message will be transformed into "(objectclass) message"
        * src/gpodder/libpodcasts.py: Add "Played" icon to the model for 
          played status display; use gtk.STOCK_NEW instead of "document-new" 
          for new items; mark the latest three items as new if no episodes 
          have been downloaded so far from this channel; generalize the 
          DownloadHistory class and derive a PlaybackHistory class from it
        * src/gpodder/libgpodder.py: Make use of PlaybackHistory; add config
          option "show_played" (disable/enable "Played" column in treeview);
          replace openFilename() function with playback_episode() function 
          that also updates the playback history accordingly
        * src/gpodder/libipodsync.py: Synchronize playback state ("blue dot") 
          to iPod when syncing (also update playback state when episodes is
          already on iPod); fixed a small bug that didn't set podcast flags